--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
             <div class="project">
                 <h3>Bible Tools</h3>
                 <p>
-                    This project provides tools for studying the Bible. Right now, it includes a gematria calculator
-                    that doesn't simply work on individual words, but entire passages and books of the Hebrew Bible.
+                    A JavaScript web application that provides tools for studying the Hebrew Bible, including a 
+                    full-passage gematria calculator.
                 </p>
                 <a href="https://termspar.github.io/BibleTools" target="_blank">View Project</a>
+                <a href="https://github.com/TermSpar/BibleTools" target="_blank">View GitHub</a>
             </div>
-            <!-- Add more projects here -->
+
         </section>
     </div>
 </body>
