--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <p>
                 Since graduating from Elmhurst University with a degree in Computer Science, I have been an IT and 
                 software development professional for about two years. My experience includes working in the Django 
-                framework, using Python, Angular, and TypeScript to build reliable and efficient software solutions.
+                framework, using Python, Angular, and TypeScript to build reliable and efficient software for high end 
+                clientele.
             </p>
         </section>
 
@@ -43,6 +44,24 @@
                 </p>
                 <a href="https://termspar.github.io/BibleTools" target="_blank">View Project</a>
                 <a href="https://github.com/TermSpar/BibleTools" target="_blank">View GitHub</a>
+            </div>
+
+            <div class="project">
+                <h3>Screen Recorder</h3>
+                <p>
+                    A working screen recorder written in C# using Windows Forms and FFMPEG.
+                </p>
+                <a href="https://www.youtube.com/watch?v=kTCmjSFodpM" target="_blank">View Project</a>
+                <a href="https://github.com/TermSpar/ScreenRecorder" target="_blank">View GitHub</a>
+            </div>
+
+            <div class="project">
+                <h3>x86 Assembly Game</h3>
+                <p>
+                    A basic 2D platformer game written in x86 Assembly language.
+                </p>
+                <a href="https://youtu.be/nCkvtRDo_GQ?si=46U0hCdXSrEyf1Dn" target="_blank">View Project</a>
+                <a href="https://github.com/TermSpar/Assembly-Projects/blob/master/Assembly-2D-Platformer" target="_blank">View GitHub</a>
             </div>
 
         </section>
