--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://www.linkedin.com/in/benjamin-bollinger" target="_blank">LinkedIn</a>
         <a href="https://www.youtube.com/@termspar4231" target="_blank">YouTube</a>
     </header>
-
+    
     <div class="intro-container">
         <div class="description">
             <h1>Benjamin Bollinger</h1>
@@ -29,8 +29,8 @@
             <p>
                 Since graduating from Elmhurst University with a degree in Computer Science, I have been an IT and 
                 software development professional for about two years. My experience includes working in the Django 
-                framework, using Python, Angular, and TypeScript to build reliable and efficient software for high end 
-                clientele.
+                framework, and using Python, Angular, and TypeScript to build reliable and efficient software for high 
+                end clientele.
             </p>
         </section>
 
